--- a/templates/compartir_archivos.html
+++ b/templates/compartir_archivos.html
@@ -24,11 +24,11 @@
             <label for="nombre_base">Nombre de la carpeta destino en cada estudiante:</label><br>
             <input type="text" id="nombre_base" name="nombre_base" placeholder="Ej: ENTREGAS" style="width: 80%;" required><br><br>
 
-            <button type="submit" style="background-color: teal; color: white; padding: 8px 16px;">Copiar en todas las carpetas</button>
+            <button type="submit">Copiar en todas las carpetas</button>
         </form>
     </div>
 
-    <hr style="margin: 2rem 0;">
+    <hr>
 
     <div>
         <h3>🔗 Crear acceso directo</h3>
@@ -39,7 +39,7 @@
             <label for="nombre_acceso">Nombre base del acceso:</label><br>
             <input type="text" id="nombre_acceso" name="nombre_acceso" style="width: 80%;" placeholder="Ej: Guía TP1"><br><br>
 
-            <button type="submit" style="background-color: navy; color: white; padding: 8px 16px;">Crear accesos</button>
+            <button type="submit" >Crear accesos directos en las carpetas</button>
         </form>
     </div>
 </div>
